[package]
name = "quake3-qvm"
description = "Library to handle Quake 3 virtual machines"
keywords = ["quake3", "qvm", "vm", "parser"]
categories = ["parser-implementations"]
readme = "README.md"
repository = "https://github.com/robo9k/quake3-qvm.git"
documentation = "https://docs.rs/quake3-qvm"
license = "MIT/Apache-2.0"
authors = ["robo9k <robo@9k.lv>"]
version = "0.4.2"

[badges]
travis-ci = { repository = "robo9k/quake3-qvm" }

[dependencies]
nom = "^2.0"
error-chain = "0.7.2"
