[package]
name = "quake3-qvm"
description = """
Library to handle Quake 3 virtual machines
"""
keywords = ["quake3", "qvm", "vm", "parser"]
categories = ["parser-implementations"]
readme = "README-crate.md"
repository = "https://github.com/robo9k/quake3-qvm.git"
license = "MIT OR Apache-2.0"
license-file = "COPYRIGHT"
authors = ["robo9k <robo9k@symlink.io>"]
version = "0.4.3"
exclude = ["/.travis.yml", ".gitignore"]

[badges]
travis-ci = { repository = "robo9k/quake3-qvm" }
maintenance = { status = "experimental" }

[dependencies]
nom = "^2.0"
error-chain = "0.7.2"
